<resources>
    <string name="assalamualaikum">السَّلاَمُ عَلَيْكُمْ وَرَحْمَةُ اللهِ وَبَرَكَاتُهُ</string>
    <string name="app_name">IIWAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="server_error">Terjadi Kesalahan pada server</string>
    <string name="failed_connection">Gagal terhubung ke server</string>
    <string name="network_error">Anda tidak terhubung dengan jaringan internet. Silahkan perikas kembali koneksi Anda!</string>


    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Masuk</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="form_nominal_jamaah_pay">Nominal yang dibayar Jamaah</string>
    <string name="hint_status_kwitansi">Status Kwitansi</string>
    <string name="form_nama_lengkap">Nama Lengkap</string>
    <string name="form_nama_lengkap_kerabat">Nama Lengkap Kerabat</string>
    <string name="form_nama_ayah">Nama Ayah</string>
    <string name="form_no_identitas">No Ktp/NIK/SIM/PASSPORT</string>
    <string name="form_tempat_lahir">Tempat Lahir</string>
    <string name="form_tanggal_lahir">Tanggal Lahir</string>
    <string name="form_no_paspor">Nomor Paspor</string>
    <string name="form_paspor_dikeluarkan">Tempat Paspor dikeluarkan</string>
    <string name="form_alamat">Alamat</string>
    <string name="prompt_username">Username</string>
    <string name="form_no_telp">No. Telp</string>
    <string name="form_pekerjaan">Pekerjaan</string>
    <string name="form_pendidikan_terakhir">Pendidikan Terakhir</string>
    <string name="form_size_souvenir">Size Souvenir</string>
    <string name="prompt_ahli_waris">Ahli Waris</string>
    <string name="prompt_norek">No. Rekening</string>
    <string name="prompt_atas_nama">Atas Nama</string>
    <string name="prompt_kerabat">Keluarga Tidak Serumah yang dapat dihubungi</string>
    <string name="prompt_hubungan">Hubungan</string>
    <string name="prompt_alamat">Alamat</string>
    <string name="prompt_keterangan">Keterangan</string>
    <string name="desc_sudah_mengisi">Saya telah mengisi data dengan sebenar-benarnya</string>
    <string name="jabatan_perwakilan">Jabatan\nPERWAKILAN</string>
    <string name="jabatan_perwakilan_kdm">Jabatan\nPERWAKILAN-KDM</string>
    <string name="jabatan_perwakilan_mm">Jabatan\nPERWAKILAN-MM</string>
    <string name="copyright"> © 2018 PT. Ikhwanul Ikhlas Wisata</string>
    <string name="channel_psc">Channel PSC</string>
    <string name="kontrak_berakhir">Berakhir Kontrak</string>
    <string name="prompt_jabatan">Jabatan</string>
    <string name="date">dd/mm/yyyy</string>
    <string name="pdf_show_local_progress_title">Title Progress</string>
    <string name="pdf_show_local_progress_content">content progress</string>
    <string name="pdf_show_online_dialog_title">dialog title</string>
    <string name="pdf_show_online_dialog_question">dialog question</string>
    <string name="pdf_show_online_dialog_button_no">Tidak</string>
    <string name="pdf_show_online_dialog_button_yes">Ya</string>
    <string name="notice_tgl_berangkat">Kosongkan bila belum menentukan keberangkatan.</string>
    <string name="notice_harga_paket">Wajib diisi. Nilai dalam satuan dollar (ketik \'0\' bila belum menentukan keberangkatan)</string>
    <string name="wajib">Wajib diisi.</string>
    <string name="notice_nominal_jamaah">Wajib diisi. Nominal yang diberikan Jamaah kepada Perwakilan. Minimal Rp. 150.000,-</string>
    <string name="notice_kwitansi">Pelunasan : 3 Bulan sebelum keberangkatan.</string>
    <string name="pembelian_stok">Pembelian Stok</string>
    <string name="penjualan_stok">Penjualan Stok</string>
    <string name="loading">Loading...</string>

</resources>
