<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ikhwanul.ikhlas.iiwandroid.activities.DetailJamaahActivity"
    android:background="@color/color1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Grup Keberangkatan"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"/>
                <EditText
                    android:id="@+id/edit_grup_keberangkatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:editable="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Jenis Paket"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"/>
                <EditText
                    android:id="@+id/edit_jenis_paket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:editable="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tanggal Keberangkatan"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"/>
                <EditText
                    android:id="@+id/edit_tgl_keberangkatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:editable="false"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Harga Paket"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"/>
                <EditText
                    android:id="@+id/edit_harga_paket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:hint="Harga Paket"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nominal DP"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"/>
                <EditText
                    android:id="@+id/edit_nominal_dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:editable="false"/>
                <EditText
                    android:id="@+id/edit_nominal_jamaah_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:hint="@string/form_nominal_jamaah_pay"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nomor Kwitansi"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"/>
                <EditText
                    android:id="@+id/edit_no_kwitansi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:editable="false"/>
                <EditText
                    android:id="@+id/edit_status_kwitansi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:hint="@string/hint_status_kwitansi"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Data Pribadi"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color1"/>

                <EditText
                    android:id="@+id/edit_nama_lengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:hint="@string/form_nama_lengkap"/>

                <EditText
                    android:id="@+id/edit_nama_ayah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:hint="@string/form_nama_ayah"/>

                <EditText
                    android:id="@+id/edit_no_identitas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:hint="@string/form_no_identitas"/>

                <EditText
                    android:id="@+id/edit_tempat_lahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:hint="@string/form_tempat_lahir"/>

                <EditText
                    android:id="@+id/edit_tanggal_lahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:hint="@string/form_tanggal_lahir"/>

                <EditText
                    android:id="@+id/edit_no_paspor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:hint="@string/form_no_paspor"/>

                <EditText
                    android:id="@+id/edit_tempat_paspor_dikeluarkan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:hint="@string/form_paspor_dikeluarkan"/>

                <EditText
                    android:id="@+id/edit_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:hint="@string/form_alamat"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_radius_border1"
                    android:prompt="@string/app_name"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Update Berkas"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">
                        <android.support.v7.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:elevation="@dimen/cardview_default_radius"
                            android:layout_margin="10dp">
                            <ImageView
                                android:padding="3dp"
                                android:id="@+id/img_identity"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:alpha="200"
                                android:scaleType="fitXY"
                                android:elevation="4dp"
                                android:src="@drawable/ic_menu_camera" />
                        </android.support.v7.widget.CardView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Foto KTP"
                            android:paddingLeft="10dp"
                            android:gravity="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="11dp"
                            android:text="Maks. 10mb"
                            android:paddingLeft="10dp"
                            android:gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">
                        <android.support.v7.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:elevation="@dimen/cardview_default_radius"
                            android:layout_margin="10dp">
                            <ImageView
                                android:padding="3dp"
                                android:id="@+id/img_pass_foto"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:alpha="200"
                                android:scaleType="fitXY"
                                android:elevation="4dp"
                                android:src="@drawable/ic_menu_camera" />
                        </android.support.v7.widget.CardView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="PAS FOTO"
                            android:paddingLeft="10dp"
                            android:gravity="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="11dp"
                            android:text="Maks. 10mb"
                            android:paddingLeft="10dp"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:background="@drawable/background_with_radius_border2"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#fff"
            android:text="Simpan"/>
    </LinearLayout>
</ScrollView>
