<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ikhwanul.ikhlas.iiwandroid.activities.LoginActivity"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:focusable="true"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MASUK"
                android:textSize="45dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Assalamu'alaikum wr wb, semoga Anda selalu dalam lindungan Allah SWT"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>


            <View
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardview_shadow_start_color"/>

            <TextView
                android:id="@+id/error_info"
                android:text="Error"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:paddingBottom="10dp"
                android:gravity="center"/>

            <EditText
                android:text="IIW9"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/background_with_radius_border1"
                android:padding="10dp"
                android:layout_margin="5dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:text="dzulhulaifah"
                    android:id="@+id/password"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@drawable/background_with_radius_border1"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:drawableRight="@drawable/ic_menu_eye"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/background_with_radius_border1"
                android:layout_margin="5dp">
                <Spinner
                    android:id="@+id/spinner_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="@drawable/background_with_radius_border2"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#fff"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right|center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_help_black_24dp"
                    android:layout_gravity="right"
                    android:tint="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Help"
                    android:textStyle="bold"
                    android:gravity="right"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
